# search-vulnerabilities

./: .gitignore  README.md  log_of_work.md  pyproject.toml
cve-search-app/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
cve-search-app/app/: actions.ts  page.tsx
cve-search-app/app/api/run_sql/: route.ts
cve-search-app/app/cve-test-search/: page.tsx
cve-search-app/src/: agentService.ts
cve-search-app/src/components/: CveTable.tsx
cve-search-app/src/sql/: buildQuery.ts
cve-search-app/src/tools/: searchFilters.ts
cve-search-app/utils/supabase/: server.ts
docs/: data_preparation_and_strategy.md
supabase/: connect_db.py
