[project]
name = "search-vulnerabilities"
version = "0.1.0"
description = ""
authors = [
    {name = "Paritosh Kulkarni",email = "pari2798@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "supabase (>=2.15.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
